v1.0.3
------

* Added support for 'Reverse Grid Positions' races within Championship events. If a second race occurs, the championship
  page will show results for that too. It will correctly add points to the entrants and optionally can apply a
  multiplier to all second races to scale their points. This multiplier can be a decimal, and can even be negative!
* Added the ability to schedule championship events and custom races.
* Added button on results page to open the results on the SimResults website.
* When creating a race the number of available pit boxes for a track/layout is now displayed, max clients is limited to
  this number (requires manual upload of track - including default content).


v1.0.2
------

* Increase number of results per result listing page to 20.
* Add a 404 error for results pages that don't exist
* Results listing page now shows 10 pages in the pagination bar with options to skip to the front and end,
  and forwards/backwards by 10 pages
* Fixed an issue with named Custom Race entrants losing their car/skin on race start
* Collision speeds on Live Timings page are now rounded to 2 decimal places

v1.0.1
------

* Fixed an issue with populating default points when creating championship classes. Points for places beyond the F1
  defaults now show '0' when created, rather than '25' which was incorrectly shown before.
* Average Lap Time on Results pages is now calculated lap times that meet the following conditions:
    "if lap doesnt cut and if lap is < 107% of average for that driver so far and if lap isn't lap 1"
* Fixed an issue with Quick Race Time/Laps selector not defaulting to the correct value.

v1.0.0
------

Initial Release!
